# reader

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: main.rs
src/ui/: main-view.rs  open-capture.rs  root.rs  sidebar.rs  system-settings.rs
